# Human_Grid

./: .agents-cli-spec.md  .gitignore  README.md  kaggle_writeup.md
backend/: pyproject.toml
backend/app/: __init__.py  agent.py  main.py
backend/app/agents/: __init__.py  contracts.py  root.py
backend/app/api/: dependencies.py
backend/app/api/routes/: health.py  mission.py
backend/app/core/: errors.py  logging.py  security.py  settings.py
backend/app/mcp/: __init__.py  server.py
backend/app/models/: employee.py  knowledge.py  mcp.py  mission.py
backend/app/services/: analytics_service.py  calendar_ops.py  intelligence_engine.py  json_store.py  knowledge_layer.py  mcp_gateway.py  mission_engine.py  mission_ops.py  notification_ops.py
backend/data/: calendar.json  departments.json  employees.json  missions.json  notifications.json  projects.json  skills.json
backend/humangrid_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_mcp_gateway.py
frontend/: README.md  package-lock.json  package.json
frontend/.next/: prerender-manifest.json  trace
frontend/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo  chrome-devtools-workspace-uuid
frontend/.next/cache/eslint/: .cache_1r2p2fk
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/context/: MissionContext.tsx
frontend/services/: api.ts
frontend/types/: index.ts
outputs/: .agents-cli-spec.md  HumanGrid_implementation_plan.md
(+51 files in other folders)
