[project]
name = "humangrid-backend"
version = "0.1.0"
description = "HumanGrid FastAPI and ADK backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "python-dotenv>=1.0.1",
  "google-adk>=1.0.0",
  "mcp[cli]>=1.27,<2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["."], include = ["app", "app.*"] } }
